--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
           style="width: 30px; height: 30px; border-radius: 50%; margin-left: 8px;"
       /></a>
       <span class="" style="font-size: 14px; font-weight: bold; font-family:Arial, Helvetica, sans-serif; ;"><strong>Mesajlaşma</strong></span>
-      <span class="ml-auto mr-3"><img src="/assets/edit-regular.svg" width="15px" height="15px" ></span>
+      <span class="ml-auto mr-3"><img src="assets/edit-regular.svg" width="15px" height="15px" ></span>
       <span><i class="fas fa-ellipsis-h fa-sm mr-3"></i></span>
       <span><i class="fas fa-chevron-up fa-sm mr-3"></i></span>
       </div>
